chore: extract helpers from apifyfunction and refactor DTOs